# maven-wagon-gs

./: .bazelproject  .bazelrc  .editorconfig  .gitignore  BUILD  MODULE.bazel  Makefile  README.md  WORKSPACE  maven_lock.json  pom.xml  pom_template.xml
.github/workflows/: ci.yml  maven.yml  release.yaml
patches/: 0001-Allow-passing-sensitive-credentials-for-java_export-.patch  BUILD
scripts/: bump_version.sh  cat_version.sh  find_updates.sh  publish.sh  release.sh
src/main/java/com/synack/maven/wagon/gs/: GSOutputStream.java  GSWagon.java
src/main/java/io/github/janhicken/maven/wagon/gs/: BUILD  GSWagon.java  MimeMapper.java  ParentsIterator.java
src/main/resources/io/github/janhicken/maven/wagon/gs/: BUILD  mime.properties
src/test/: BUILD  logging.properties
src/test/java/com/google/cloud/storage/contrib/nio/testing/: BUILD  FakeStorageRpc2.java
src/test/java/com/synack/maven/wagon/gs/: GSOutputStreamTest.java  GSWagonTest.java
src/test/java/io/github/janhicken/maven/wagon/gs/: BUILD  Dummy.java  GSWagonTest.java
tools/: BUILD  Dummy.java
