module(name = "maven_wagon_gs")

bazel_dep(name = "aspect_rules_lint", version = "0.14.2")

# ╔════════════════════════════════════════════════════════════════════════════╗
# ║                                   Maven                                    ║
# ╚════════════════════════════════════════════════════════════════════════════╝

bazel_dep(name = "rules_jvm_external", version = "6.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

MAVEN_WAGON_VERSION = "3.5.3"

SLF4J_VERSION = "2.0.12"

maven.install(
    name = "maven_wagon_gs_maven",
    artifacts = [
        # Maven Wagon
        "org.apache.maven.wagon:wagon-provider-api:%s" % MAVEN_WAGON_VERSION,
        "org.apache.maven.wagon:wagon-provider-test:%s" % MAVEN_WAGON_VERSION,

        # Google Cloud Storage
        "com.google.cloud:google-cloud-storage:2.36.1",
        "com.google.cloud:google-cloud-nio:0.127.14",

        # Logging
        "org.slf4j:slf4j-api:%s" % SLF4J_VERSION,
        "org.slf4j:slf4j-jdk14:%s" % SLF4J_VERSION,

        # Dev tools
        "com.google.googlejavaformat:google-java-format:1.21.0",
    ],
    excluded_artifacts = [
        "com.google.collections:google-collections",
    ],
    fail_if_repin_required = True,
    fetch_sources = True,
    lock_file = "//:maven_lock.json",
    repositories = ["https://repo1.maven.org/maven2"],
    version_conflict_policy = "pinned",
)
use_repo(maven, "maven_wagon_gs_maven", "unpinned_maven_wagon_gs_maven")
